tests/knowledge/testing-accounts-data/account-data-vpc-platform/test/eu-north-1/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-a10a53ca",
                    "NetworkAclId": "acl-384ff951",
                    "SubnetId": "subnet-fd2a9e94"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-a00a53cb",
                    "NetworkAclId": "acl-384ff951",
                    "SubnetId": "subnet-cf9e48b4"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-a20a53c9",
                    "NetworkAclId": "acl-384ff951",
                    "SubnetId": "subnet-a51dece8"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-384ff951",
            "OwnerId": "111111111111",
            "Tags": [],
            "VpcId": "vpc-39c07650"
        }
    ]
}
